<resources>
    <string name="app_name">Clima en Argentina</string>
    <string name="ciudad">Ciudad</string>
    <string name="temp">Temperatura</string>
    <string name="max">Maxima</string>
    <string name="min">Minima</string>
    <string name="humedad">Humedad</string>
    <string name="presion">Presión</string>
    <string name="mnu_add">Agregar</string>
    <string name="mnu_ref">Refrescar</string>
    <string name="nombre">Nombre</string>
    <string name="codigo">Codigo</string>
    <string name="btn_agregar">Agregar</string>
</resources>
