<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.practicoapiclima.CiudadActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ciudad"
        android:textSize="32sp"
        android:textColor="@color/colorTexto"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp"
        android:textSize="28sp"
        android:textColor="@color/colorTexto"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/max"
        android:textSize="28sp"
        android:textColor="@color/colorTexto"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtMaxima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/min"
        android:textSize="28sp"
        android:textColor="@color/colorTexto"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtMinima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/humedad"
        android:textSize="28sp"
        android:textColor="@color/colorTexto"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtHumedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/presion"
        android:textSize="28sp"
        android:textColor="@color/colorTexto"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtPresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"/>
</LinearLayout>
